# Kielas_rm_detector_train

./: .gitignore  Data_Augmentation.md  config.yaml  main.py  pyproject.toml
extract_ros2_bag/: extract.py
src/: clean.py
src/data_process/: augment.py  balance.py  main.py  process.py  purify.py  visiualize.py
src/data_process/src/: __init__.py  augment.py  balance.py  purify.py  split.py  visiualize.py
src/demo/: demo.py
src/demo/src/: detector.py
src/training/: export.py  train.py
src/training/src/: __init__.py  augment.py  datasets.py  loss.py  model.py
tools/: background.py  extract_ros2_bag.py  labels.py  m.md  scaler.py
tools/hik_camera/src/: hik_camera.py
