[project]
name = "kielas-rm-detector-train"
version = "0.1.0"
description = "跨平台 rm 视觉关键点检测环境"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kielas", email = "c1470759@outlook.com" }]

# 基础通用依赖（不含 torch，由下方 groups 注入）
dependencies = [
    "cvbridge3>=1.1",
    "numpy>=1.24.0,<2.0.0",
    "opencv-python<4.11",
    "rich>=14.3.3",
    "PyYAML",
    "requests>=2.33.1",
    "matplotlib>=3.10.*",
    "ipywidgets>=8.0.0",
]

[dependency-groups]
# Windows 组：锁定支持 50 系显卡的 cu128
win = [
    "torch>=2.4.0; sys_platform == 'win32'",
    "torchvision>=0.19.0; sys_platform == 'win32'",
    "onnxruntime-gpu>=1.18.0; sys_platform == 'win32'",
]
# macOS 组：使用官方原生索引（支持 Metal/MPS 加速）
mac = [
    "torch>=2.4.0; sys_platform == 'darwin'",
    "torchvision>=0.19.0; sys_platform == 'darwin'",
]
# Linux 组：通常使用通用 CUDA 12.x 或 CPU 版本
linux = [
    "torch>=2.4.0; sys_platform == 'linux'",
    "torchvision>=0.19.0; sys_platform == 'linux'",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
index-strategy = "unsafe-best-match"
# 额外索引：主要服务于 Windows 的预览版驱动
extra-index-url = ["https://download.pytorch.org/whl/test/cu128"]

[tool.uv.sources]
# 核心逻辑：只有在 Windows 平台时，torch 才去寻找 cu128 索引
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/test/cu128"
explicit = true